--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root{
   --colorPrimario : #00324D;
-  --colorPrimarioClaro : rgba(0, 50, 77, 0.9);
+  --colorPrimarioClaro : rgba(0, 50, 77, 0.95);
   --colorSecundario: #39A900;
   --colorBlanco: #fff;
   --colorNegro: #000;
@@ -25,6 +25,8 @@
   width: 96vw;
   height: 100vh;
   margin-left: 4vw;
+  display: flex;
+  flex-direction: row;
 }
 
 .contForm{
@@ -36,5 +38,12 @@
   display: flex;
   flex-direction: column;
 
-  padding: 5vh 5vh;
+  padding: 7vh 5vh;
+}
+
+.contInfoPage{
+  width: 74vw;
+  height: 100vh;
+
+  padding: 4vh 3vh 4vh 2vh;
 }
