--- a/src/pages/schedule/styles/FormSchedule.css
+++ b/src/pages/schedule/styles/FormSchedule.css
@@ -1,9 +1,38 @@
 .contOptions {
-    height: 80vh;
+    height: 72vh;
     width: initial;
 
     display: flex;
     flex-direction: column;
 
     gap: 5vh;
+}
+
+.contButtons{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5vh;
+}
+
+.mensaje-respuesta {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 8px;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    background-color: var(--colorBlanco);
+    left: 8%;
+}
+
+.mensaje-respuesta:contains("✅") {
+    color: #155724;
+}
+
+.mensaje-respuesta:contains("❌"), 
+.mensaje-respuesta:contains("⚠️") {
+    opacity: 1;
+    color: #721c24;
 }
